syntax = "proto3";

package systems.ajax.motrechko.airguardian.input.reqrepl.monitoringobject.delete_monitoring_object;

option java_multiple_files = true;

import "systems/ajax/motrechko/airguardian/commonresponse/monitoringobject/monitoring_object.proto";

message DeleteMonitoringObjectRequest {
    string monitoring_object_id = 1;
}

message DeleteMonitoringObjectResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {

  }

  message Failure {
    string message = 100;
  }
}
